# josephus

./: .env.example  .gitignore  .pre-commit-config.yaml  .secrets.baseline  ARCHITECTURE_PATTERNS.md  CLAUDE.md  Dockerfile  IMPLEMENTATION_PLAN.md  README.md  REQUIREMENTS.md  SECURITY.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  security.yml
alembic/: env.py
alembic/versions/: 001_initial_schema.py
eval/: README.md  repos.yaml
eval/ground_truth/ackee/: annotations.json
eval/ground_truth/backstage/: annotations.json
eval/ground_truth/lektor/: annotations.json
eval/ground_truth/miniflux/: annotations.json
eval/ground_truth/taiga/: annotations.json
eval/pr_scenarios/: labels.json
eval/pr_scenarios/should_ignore/: ackee-refactor-database-layer.diff  lektor-fix-typo-in-tests.diff  miniflux-update-go-modules.diff  taiga-fix-admin-styling.diff
eval/pr_scenarios/should_update/: ackee-add-graphql-mutation.diff  lektor-add-cli-command.diff  miniflux-add-config-option.diff
examples/: guidelines-template.md  guidelines-template.xml
src/josephus/: __init__.py
src/josephus/analyzer/: __init__.py  audience.py  filters.py  frontend.py  local.py  repo.py
src/josephus/api/: app.py  auth.py  errors.py  middleware.py  rate_limit.py
src/josephus/cli/: __init__.py  api_client.py  config.py
src/josephus/config/: __init__.py  repo_config.py
src/josephus/core/: __init__.py  config.py  service.py  ui_service.py
src/josephus/crawler/: __init__.py  auth.py  browser.py  dom_extractor.py  models.py  page_crawler.py  screenshot.py  site_crawler.py
src/josephus/db/: __init__.py  models.py  session.py
src/josephus/eval/: __init__.py  __main__.py  crawl.py  download.py  evaluate.py  generate.py  judge.py  metrics.py  runner.py
src/josephus/generator/: __init__.py  docs.py  planning.py  prompts.py  ui_docs.py  ui_planning.py  validation.py
src/josephus/github/: __init__.py  auth.py  client.py
src/josephus/llm/: __init__.py  provider.py
src/josephus/security/: __init__.py  errors.py  scanner.py
src/josephus/templates/: __init__.py  loader.py
src/josephus/worker/: __init__.py  celery_app.py  tasks.py
tests/integration/: __init__.py  conftest.py  test_api.py  test_config.py  test_security.py
tests/unit/: test_analyzer_filters.py  test_api_auth.py  test_api_v1.py  test_audience.py  test_config.py  test_crawler_models.py  test_db_models.py  test_docs_path_safety.py  test_eval.py  test_eval_crawl.py  test_eval_download.py  test_eval_evaluate.py  test_eval_generate.py  test_frontend_analysis.py  test_github_auth.py  test_large_repos.py  test_llm_multimodal.py  test_local_analyzer.py  test_planning.py  test_screenshot_manager.py  test_security.py  test_security_errors.py  test_site_crawler.py  test_templates.py  test_ui_generator.py  test_ui_planning.py  test_validation.py  test_validation_configs.py  test_webhooks.py  test_worker.py
(+39 files in other folders)
