[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "josephus"
version = "0.1.0"
description = "AI-powered documentation generator - automatically create and maintain customer-facing docs from code"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
    { name = "schdaniel" }
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "httpx>=0.27.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "sqlalchemy>=2.0.0",
    "asyncpg>=0.30.0",
    "pgvector>=0.3.0",
    "celery[redis]>=5.4.0",
    "redis>=5.2.0",
    "anthropic>=0.39.0",
    "openai>=1.55.0",
    "tiktoken>=0.8.0",
    "tree-sitter>=0.23.0",
    "pyyaml>=6.0.0",
    "python-multipart>=0.0.12",
    "pyjwt[crypto]>=2.9.0",
    "logfire>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "pytest-timeout>=2.3.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "pre-commit>=4.0.0",
    "respx>=0.21.0",
    "polyfactory>=2.17.0",
]

[project.scripts]
josephus = "josephus.cli:main"

[project.urls]
Homepage = "https://github.com/schdaniel/josephus"
Repository = "https://github.com/schdaniel/josephus"
Issues = "https://github.com/schdaniel/josephus/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/josephus"]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in argument defaults
]

[tool.ruff.lint.isort]
known-first-party = ["josephus"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["celery.*", "tree_sitter.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "e2e: end-to-end tests (require real GitHub)",
    "slow: slow tests",
]
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.coverage.run]
source = ["src/josephus"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]
